--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -426,7 +426,6 @@
                 <property name="position">1</property>
               </packing>
             </child>
-
             <child>
               <object class="GtkBox" id="vbox_updating">
                 <property name="border_width">12</property>
@@ -630,16 +629,14 @@
             <child>
               <object class="GtkBox" id="vbox_devices">
                 <property name="visible">True</property>
-                <property name="border_width">12</property>
+                <property name="border-width">12</property>
                 <property name="spacing">6</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkTable" id="table_devices">
+                  <object class="GtkGrid">
                     <property name="visible">True</property>
-                    <property name="n_rows">6</property>
-                    <property name="n_columns">2</property>
-                    <property name="column_spacing">6</property>
-                    <property name="row_spacing">6</property>
+                    <property name="column-spacing">6</property>
+                    <property name="row-spacing">6</property>
                     <child>
                       <object class="GtkLabel" id="label_device_type">
                         <property name="visible">True</property>
@@ -648,19 +645,19 @@
                         <property name="justify">right</property>
                       </object>
                       <packing>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
+                        <property name="left-attach">0</property>
+                        <property name="top-attach">0</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkComboBox" id="combobox_device_type">
                         <property name="visible">True</property>
-                        <signal name="changed" handler="on_combobox_device_type_changed"/>
+                        <property name="hexpand">True</property>
+                        <signal name="changed" handler="on_combobox_device_type_changed" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="y_options"></property>
+                        <property name="left-attach">1</property>
+                        <property name="top-attach">0</property>
                       </packing>
                     </child>
                     <child>
@@ -670,132 +667,108 @@
                         <property name="label" translatable="yes">Mountpoint:</property>
                       </object>
                       <packing>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
+                        <property name="left-attach">0</property>
+                        <property name="top-attach">1</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="btn_filesystemMountpoint">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <signal name="clicked" handler="on_btn_device_mountpoint_clicked"/>
+                        <property name="hexpand">True</property>
+                        <property name="receives-default">False</property>
+                        <signal name="clicked" handler="on_btn_device_mountpoint_clicked" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="y_options"></property>
+                        <property name="left-attach">1</property>
+                        <property name="top-attach">1</property>
                       </packing>
                     </child>
-                    <child>
-                      <object class="GtkLabel" id="label_on_sync">
-                        <property name="visible">True</property>
-                        <property name="xalign">1</property>
-                        <property name="label" translatable="yes">After syncing an episode:</property>
-                        <property name="justify">right</property>
-                      </object>
-                      <packing>
-                        <property name="top_attach">5</property>
-                        <property name="bottom_attach">6</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkComboBox" id="combobox_on_sync">
-                        <property name="visible">True</property>
-                        <signal name="changed" handler="on_combobox_on_sync_changed"/>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">5</property>
-                        <property name="bottom_attach">6</property>
-                        <property name="y_options"></property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkCheckButton" id="checkbutton_create_playlists">
-                        <property name="label" translatable="yes">Create playlists on device</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="draw_indicator">True</property>
-                        <signal name="toggled" handler="on_checkbutton_create_playlists_toggled"/>
-                      </object>
-                      <packing>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">2</property>
-                        <property name="bottom_attach">3</property>
-                      </packing>
-                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkCheckButton" id="checkbutton_create_playlists">
+                    <property name="label" translatable="yes">Create playlists on device</property>
+                    <property name="visible">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="draw-indicator">True</property>
+                    <signal name="toggled" handler="on_checkbutton_create_playlists_toggled" swapped="no"/>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="visible">True</property>
+                    <property name="spacing">12</property>
                     <child>
                       <object class="GtkLabel" id="label_device_playlists">
                         <property name="visible">True</property>
-                        <property name="xalign">1</property>
                         <property name="label" translatable="yes">Playlists Folder:</property>
+                        <property name="xalign">1</property>
                       </object>
                       <packing>
-                        <property name="top_attach">3</property>
-                        <property name="bottom_attach">4</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options"></property>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="btn_playlistfolder">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <signal name="clicked" handler="on_btn_playlist_folder_clicked"/>
+                        <property name="receives-default">False</property>
+                        <signal name="clicked" handler="on_btn_playlist_folder_clicked" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">3</property>
-                        <property name="bottom_attach">4</property>
-                        <property name="y_options"></property>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
-	                <child>
-	                  <object class="GtkCheckButton" id="checkbutton_delete_using_playlists">
-	                    <property name="label" translatable="yes">Remove episodes deleted on device from gPodder</property>
-	                    <property name="visible">True</property>
-	                    <property name="can_focus">True</property>
-	                    <property name="receives_default">False</property>
-	                    <property name="draw_indicator">True</property>
-	                  </object>
-	                  <packing>
-                        <property name="left_attach">0</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">4</property>
-                        <property name="bottom_attach">5</property>
-                        <property name="y_options"></property>
-	                  </packing>
-	                </child>
-
                   </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">0</property>
-                  </packing>
                 </child>
-              <child>
+                <child>
+                  <object class="GtkCheckButton" id="checkbutton_delete_using_playlists">
+                    <property name="label" translatable="yes">Remove episodes deleted on device from gPodder</property>
+                    <property name="visible">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="draw-indicator">True</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="visible">True</property>
+                    <property name="spacing">12</property>
+                    <child>
+                      <object class="GtkLabel" id="label_on_sync">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">After syncing an episode:</property>
+                        <property name="justify">right</property>
+                        <property name="xalign">1</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkComboBox" id="combobox_on_sync">
+                        <property name="visible">True</property>
+                        <signal name="changed" handler="on_combobox_on_sync_changed" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                </child>
+                <child>
                   <object class="GtkCheckButton" id="checkbutton_skip_played_episodes">
                     <property name="label" translatable="yes">Only sync unplayed episodes</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="draw_indicator">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="draw-indicator">True</property>
                   </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">1</property>
-                  </packing>
                 </child>
               </object>
               <packing>
