Change 'sync' action keyboard shortcut to ctrl-d

--- a/share/gpodder/ui/hdy/menus.ui
+++ b/share/gpodder/ui/hdy/menus.ui
@@ -16,7 +16,7 @@
       <item>
         <attribute name="action">win.sync</attribute>
         <attribute name="label" translatable="yes">Sync to device</attribute>
-        <attribute name="accel">&lt;Primary&gt;s</attribute>
+        <attribute name="accel">&lt;Primary&gt;d</attribute>
       </item>
       <item>
         <attribute name="action">win.showProgress</attribute>
