hdy/gpodderepisodeselector.ui: Set show-expanders to False

--- a/share/gpodder/ui/hdy/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/hdy/gpodderepisodeselector.ui
@@ -76,6 +76,7 @@
                     <property name="can-focus">True</property>
                     <property name="headers-visible">False</property>
                     <property name="enable-search">False</property>
+                    <property name="show-expanders">False</property>
                     <property name="activate-on-single-click">True</property>
                     <signal name="row-activated" handler="on_row_activated" swapped="no"/>
                     <child internal-child="selection">
