--- a/share/gpodder/ui/hdy/gpodderpreferences.ui
+++ b/share/gpodder/ui/hdy/gpodderpreferences.ui
@@ -561,6 +561,26 @@
                         <property name="position">7</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkSeparator" id="hseparator_updating3">
+                        <property name="orientation">horizontal</property>
+                        <property name="visible">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">8</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_check_connection">
+                        <property name="label" translatable="yes">Check connection before updating (if supported)</property>
+                        <property name="visible">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">9</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="name">page4</property>
